# au515_tp2_test

./: CMakeLists.txt  LICENSE  README.md  install_opencv3.sh  package.xml
config/: env_test.yaml  projet4Ac.yaml
launch/: test.launch
media/materials/scripts/: aruco0.material  aruco1.material
nodes/: follower.py
urdf/: aruco1.urdf  aruco2.urdf  laboratory.sdf  robot.gazebo  robot.xacro  robot_lead.gazebo  robot_lead.xacro
worlds/: empty_world.world  env_test.world  grass_world.world  projet4A.world  projet4Ab.world  projet4Ac.world
