<?xml version="1.0"?>
<package>
  <name>au515_tp2_test</name>
  <version>0.0.1</version>
  <description>A simple aruco use case</description>

  <maintainer email="jamy.chahal@ipsa.fr">Jamy Chahal</maintainer>

  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros gazebo_media_path="${prefix}"/>

  </export>
</package>
